# pick-a-double

./: .env  .gitignore  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-bcd1cfdeb6e6e54eea93713ce87607268241a75ec3660551fa3b694df4c7b6ab.json  query-fa0bb60e5828684288cba199ad7758d6e477871de09b18bf877a3cebebc96f92.json
configuration/: base.yaml
migrations/: 20240313000936_create_picks_table.sql  20240323023717_create_users_table.sql  20250112165549_teams.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs
src/domain/: new_user.rs  user_email.rs  user_name.rs
src/routes/: create_user.rs  mod.rs  picks.rs
src/routes/ingest/: teams.rs
tests/: health_check.rs
tests/api/: helpers.rs  main.rs  picks.rs  users.rs
tests/api/ingest/: teams.rs
